# a3-ai-coach

./: .dockerignore  .env.example  .env.prod.example  .env.test.example  .gitignore  A3-prompt-优化后.md  A3-prompt.md  A3教练_提示词母版_v1.json  A3教练_提示词母版_v2.json  A3教练提示词.md  A3教练母体.history-copy627.json  A3教练母体.history-优化0626.json  A3教练母体.history-优化后20260626.json  A3教练母体.history.json  A3教练母体.history20260630.json  A3教练母体.md  Dockerfile.backend  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  岗位标准化母体.md  软件开发工程师-错误示例（新）.xlsx
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_auth_sessions_table.py  003_user_sso_fields.py  004_sso_user_whitelist.py  007_chat_session_title_pin_delete.py  008_coaching_mode_column.py  009_coaching_mode_default_a3.py
app/api/: deps.py  router.py  versioning.py
app/core/: config.py  database.py  logger.py  security.py
app/extractors/: document.py  manager.py  presentation.py  spreadsheet.py
app/models/: chat.py  db_models.py  schema.py
app/services/: admin_conversation_service.py  cas_service.py  chat_service.py  coaching_mode_service.py  context_service.py  conversation_summary_service.py  feedback_service.py  llm_service.py  sse_service.py  (+5 more)
docs/: api-versioning.md  cas-sso-local-debugging-guide.md  production-deployment.md
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo
scripts/: backup_db.sh
static/: index.html
tests/: conftest.py
(+95 files in other folders)
