[project]
name = "chat-wwith-gb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"fastapi>=0.115.0",
	"httpx>=0.27.0",
	"loguru>=0.7.2",
	"openpyxl>=3.1.5",
	"pypdf>=4.3.1",
	"python-dotenv>=1.0.1",
	"python-multipart>=0.0.9",
	"uvicorn>=0.30.0",
	"xlrd>=2.0.1",
]
